Version 0.9.6-git - unknown
- add new language zh_CN (fvancaen)
- add new plugin, feature, SMS survey (anton)
- add new method interceptsendsms() to intercept sent SMS before handled by gateway (anton)
- add new field, in_receiver, in db table tblUserInbox and tblSMSIncoming (anton)
- add method to save receiver number, currently available only in kannel and clickatell (anton)
- fix autoreply unable to delete scenario (anton)
- fix sms subscribe, subscribing to disabled keyword should not happen (anton)
- fix typo phonebook_groupcode2id() in webservices_bc() lib/fn_webservices.php (anton)
- fix wrong group while sending broadcast sms to group when 'Or' field is filled (anton)
- fix sms subscribe, subscribing to disabled keyword should not happen (anton)
- fix #3109982 wrong autoreply result due to missing autoreply_id in db query (anton)

Version 0.9.5.2 - 101115
- MAJOR: all SMS date/time will be adjusted to GMT+0 in database (anton)
- MAJOR: themes structure changed, for example loginpage.php to page_login.php (anton)
- add method to modify parameters in interceptincomingsms() and interceptsmstoinbox() (anton)
- add new $app handler 'page' to access certain (custom) pages from themes (anton)
- add timezone settings (anton)
- add new tools pvat, replace keyword @<username> with PV <username> (anton)
- add new tools xlate, utilized google translate API to translate words (anton)
- add new form, registration form page, allow public to register an account (anton)
- add new form, forgot password form page, recover forgottent password (anton)
- add option in main configuration to disable/enable public registration (anton)
- add option in main configuration to disable/enable recover password (anton)
- add option in main configuration to fill default user credit for registration (anton)
- remove manual refresh, this menu may give unexpected results (anton)
- fix #3095609 XSS issue (security hole) (anton)
- fix #3095660 should be switch() (anton)