@@ -6,15 +6,15 @@
  * @param $keyword
  *   checkavailablekeyword() will insert keyword for checking to the hook here
  * @return 
- *   TRUE if keyword is NOT available
+ *   TRUE if keyword is available
  */
 function sms_command_hook_checkavailablekeyword($keyword)
 {
-    $ok = false;
+    $ok = true;
     $db_query = "SELECT command_id FROM "._DB_PREF_."_featureCommand WHERE command_keyword='$keyword'";
     if ($db_result = dba_num_rows($db_query))
     {
-        $ok = true;
+        $ok = false;
     }
     return $ok;
 }
