@@ -7,13 +7,13 @@
  * @param $keyword
  *   checkavailablekeyword() will insert keyword for checking to the hook here
  * @return 
- *   TRUE if keyword is NOT available
+ *   TRUE if keyword is available
  */
 function sms_quiz_hook_checkavailablekeyword($keyword) {
-	$ok = false;
+	$ok = true;
 	$db_query = "SELECT quiz_id FROM " . _DB_PREF_ . "_featureQuiz WHERE quiz_keyword='$keyword'";
 	if ($db_result = dba_num_rows($db_query)) {
-		$ok = true;
+		$ok = false;
 	}
 	return $ok;
 }
