@@ -4,6 +4,7 @@ Version 0.9.6-git - unknown
 - add new method interceptsendsms() to intercept sent SMS before handled by gateway (anton)
 - add new field, in_receiver, in db table tblUserInbox and tblSMSIncoming (anton)
 - add method to save receiver number, currently available only in kannel and clickatell (anton)
+- fix checkavailablekeyword() lib/fn_core.php to have hooks return TRUE if available (anton)
 - fix autoreply unable to delete scenario (anton)
 - fix sms subscribe, subscribing to disabled keyword should not happen (anton)
 - fix typo phonebook_groupcode2id() in webservices_bc() lib/fn_webservices.php (anton)
